[package]
name = "rendering"
version = "0.1.0"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]

[dependencies]
tera = "0.10"
syntect = { version = "1", features = ["static-onig"] }
pest = "1.0.0-beta"
pest_derive = "1.0.0-beta"
pulldown-cmark = "0"
slug = "0.1"
serde = "1.0"
serde_derive = "1.0"

errors = { path = "../errors" }
front_matter = { path = "../front_matter" }
highlighting = { path = "../highlighting"}
utils = { path = "../utils" }

[dev-dependencies]
templates = { path = "../templates" }
